[gd_scene load_steps=11 format=3 uid="uid://yf8y54rsl1d8"]

[ext_resource type="Script" path="res://hud.gd" id="1_nxh87"]
[ext_resource type="Texture2D" uid="uid://c4frds7x6t8yx" path="res://suika/bubble.png" id="1_tqj72"]
[ext_resource type="Texture2D" uid="uid://cmnhshkb4ux61" path="res://suika/suika ui reference.jpg" id="1_vtveo"]
[ext_resource type="Texture2D" uid="uid://ojjopxkf8cmo" path="res://suika/faces.png" id="3_f3hu3"]
[ext_resource type="FontFile" uid="uid://d4kabkagmfeq" path="res://addons/silent_wolf/assets/fonts/Comfortaa-Bold.ttf" id="5_r8fsj"]
[ext_resource type="PackedScene" uid="uid://dsinook6ldkyj" path="res://board.tscn" id="6_jlvu5"]

[sub_resource type="LabelSettings" id="LabelSettings_480l8"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_evo2a"]
font_size = 55

[sub_resource type="LabelSettings" id="LabelSettings_gfg20"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_mn75s"]
font = ExtResource("5_r8fsj")
font_size = 56
outline_size = 8
outline_color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_nxh87")

[node name="SuikaUiReference" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("1_vtveo")

[node name="NextFruit" type="Label" parent="."]
offset_left = 1002.0
offset_top = 41.0
offset_right = 1157.0
offset_bottom = 89.0
text = "Next Fruit
"
label_settings = SubResource("LabelSettings_480l8")

[node name="Bubble" type="Sprite2D" parent="NextFruit"]
position = Vector2(80.9999, 141)
scale = Vector2(0.690715, 0.690715)
texture = ExtResource("1_tqj72")

[node name="Score" type="Label" parent="."]
offset_left = 176.0
offset_top = 116.0
offset_right = 207.0
offset_bottom = 195.0
size_flags_horizontal = 0
text = "0
"
label_settings = SubResource("LabelSettings_evo2a")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Bubble2" type="Sprite2D" parent="Score"]
position = Vector2(17, 50)
scale = Vector2(0.832295, 0.832295)
texture = ExtResource("1_tqj72")

[node name="Order" type="Label" parent="."]
offset_left = 1021.0
offset_top = 304.0
offset_right = 1164.0
offset_bottom = 376.0
text = "Order"
label_settings = SubResource("LabelSettings_gfg20")

[node name="Bubble3" type="Sprite2D" parent="Order"]
position = Vector2(72, 197)
texture = ExtResource("1_tqj72")

[node name="Sprite2D2" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(86, -50)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(104, 4, 91, 91)

[node name="Sprite2D3" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(101, 4)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(204, 4, 91, 91)

[node name="Sprite2D4" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(86, 53)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(304, 4, 91, 91)

[node name="Sprite2D5" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(50, 94)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(404, 4, 91, 91)

[node name="Sprite2D6" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(-3, 104)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(504, 4, 91, 91)

[node name="Sprite2D7" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(-59, 92)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(604, 4, 91, 91)

[node name="Sprite2D8" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(-96, 54)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(704, 4, 91, 91)

[node name="Sprite2D9" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(-111, 9)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(804, 4, 91, 91)

[node name="Sprite2D10" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(-96, -48)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(904, 4, 91, 91)

[node name="Sprite2D11" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(-58, -84)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(1004, 4, 91, 91)

[node name="Sprite2D" type="Sprite2D" parent="Order/Bubble3"]
position = Vector2(47, -84)
scale = Vector2(0.407246, 0.407246)
texture = ExtResource("3_f3hu3")
region_enabled = true
region_rect = Rect2(4, 4, 91, 91)

[node name="Message" type="Label" parent="."]
offset_left = 548.0
offset_top = 202.0
offset_right = 736.0
offset_bottom = 266.0
size_flags_horizontal = 4
text = "Game Over"
label_settings = SubResource("LabelSettings_mn75s")
horizontal_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]

[node name="StartButton" type="Button" parent="."]
offset_left = 521.0
offset_top = 491.0
offset_right = 763.0
offset_bottom = 552.0
text = "START"

[node name="NameInput" type="LineEdit" parent="."]
offset_left = 495.0
offset_top = 336.0
offset_right = 787.0
offset_bottom = 390.0
placeholder_text = "Enter your name to save your score"
alignment = 1

[node name="SubmitButton" type="Button" parent="NameInput"]
visible = false
layout_mode = 0
offset_left = 96.0
offset_top = 60.0
offset_right = 193.0
offset_bottom = 104.0
text = "Submit
"

[node name="Leaderboard" parent="." instance=ExtResource("6_jlvu5")]

[node name="Board" parent="Leaderboard" index="1"]
offset_left = 68.0
offset_top = 304.0
offset_right = 569.0
offset_bottom = 760.0
scale = Vector2(0.562014, 0.585783)

[node name="CloseButtonContainer" parent="Leaderboard/Board" index="3"]
visible = false

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]

[editable path="Leaderboard"]
